# spawn_exiftool

./: Cargo.toml  README.md
src/: main.rs
