[package]
name = "spawn_exiftool"
version = "1.0.0"
authors = ["Andrew Roach <afr69email-Github@yahoo.com>"]
edition = "2021"
description = "Small example program for running ExifTool in \"stay open\" mode and using pipes to control and respond to it."
license = "GPL-2.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
